optionsarea will no longer ever overlap article. and fixed the graph+log at 1160 and below. log no longer has that weird thing happen to it for 6 pixels

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -251,6 +251,7 @@ li.navbar-text-account {
 
 .options-area {
   min-height: 105px;
+  margin: 0 0 0.5em 0;
 }
 /*graph*/
 graph {
